Added biz.view function
